# randir

./: .gitignore  Cargo.toml  README.md
doc/: README.html
examples/random_names/: main.rs
src/: entry.rs  lib.rs  utils.rs
