[package]
name = "randir"
version = "0.2.0"
authors = ["mibes <mibes@mibesco.com>"]
edition = "2018"
license = "MIT"
description = "Generates a directory with random names, telephone numbers & email addresses."
repository = "https://github.com/mibes/randir"
readme = "README.md"

[dependencies]
rand = "0.9.2"
